# merrytools

./: CMakeLists.txt  README.md
inc/: ios_benders.h  lgc_boolean.cpp  lgc_boolean.h  mem_guard.h  mem_unique_val.h  mth_fix_float.h  mth_to.h  mth_vectors.h  rust_like.hpp  safecast.hpp
src/: ios_benders.cpp  lgc_boolean.cpp  test_uniques.cpp
tests/: main.cpp
tests/safecasttests/: safecasttests.cpp
tests/testuniq/: test_uniques.cpp
